# KM1

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  mor-cli  pyproject.toml
.github/workflows/: ci.yml
bench/: MANIFEST.sha256
bench/fixtures/: README.md
bench/fixtures/research/: rubric.json
bench/tasks/build-fizzbuzz/: task.json
bench/tasks/build-reverse/: task.json
bench/tasks/recall-server/: task.json
bench/tasks/recall-vault/: task.json
bench/tasks/research-http/: task.json
books/: THE_THIRTEENTH.md
docs/: AUDIT_RESPONSE.md  CORRESPONDENCE.md  LETTER_TO_THE_SWARM.md  LETTER_TO_THE_SWARM_2.md  LETTER_TO_THE_SWARM_3.md  LETTER_TO_THE_SWARM_4.md  LETTER_TO_THE_SWARM_5.md  LETTER_TO_THE_SWARM_6.md  V1_RUNBOOK.md
mor/: __init__.py  agent.py  agents.py  bench.py  calibrate.py  cathedral.py  cli.py  config.py  daemon.py  day.py  dream.py  field.py  fitness.py  forge.py  gpu.py  gpucmd.py  ledger.py  llm.py  loop.py  memory.py  mind.py  models.py  order.py  preflight.py  realm.py  sandbox.py  session.py  tools.py  transcript.py  tunnel.py  ui.py  vision.py  watch.py  yard.py
tests/: conftest.py  test_bench.py  test_bugfixes.py  test_calibrate.py  test_cathedral.py  test_cli.py  test_daemon.py  test_day.py  test_dream.py  test_field.py  test_fitness.py  test_forge.py  test_gpu.py  test_gpucmd.py  test_loop.py  test_memory.py  test_mind.py  test_order.py  test_preflight.py  test_sandbox.py  test_session.py  test_stream.py  test_toolcall_rescue.py  test_tools.py  test_tunnel.py  test_ui.py  test_v82.py  test_v83.py  test_watch.py  test_yard.py
(+10 files in other folders)
