[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "mor"
version = "1.1.0"
description = "MoRE — a small multi-agent CLI harness for local LLMs, standard library only."
readme = "README.md"
requires-python = ">=3.10"
# MoRE runs on the Python standard library. Nothing to install.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
mor = "mor.cli:main"

[tool.setuptools.packages.find]
include = ["mor*"]
